<resources>
    <string name="app_name">Lista de empresas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_empresa">Adicionar Empresa</string>
    <string name="title_activity_lista_vaga">Lista De Vagas</string>
    <string name="title_activity_view_add_vaga">Cadastro de Vagas</string>
    <string name="nomeVaga">Nome da Vaga</string>
    <string name="digitaVaga">Digite o nome da Vaga:</string>
    <string name="numeroSalario">Salário</string>
    <string name="digitaSalario">Digite o valor do salário:</string>
    <string name="botaoVaga">Cadatrar</string>


    <string name="nomeEmpresa">Nome</string>
    <string name="digiteEmpresa">Digite o nome da Empresa:</string>
    <string name="botaoEmpresa">Salvar</string>

    <string name="numeroCamisaVaga">Número</string>

    <string name="excluirLista">Você tem certeza que quer excluir a lista?</string>
    <string name="excluirVaga">Você tem certeza que quer excluir a Vaga?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="deletar">Excluiído lista...</string>
    <string name="deletarVaga">Excluiído Vaga...</string>




</resources>
