<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#585858"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.empresas.ViewAddProduto"
    tools:showIn="@layout/activity_view_add_vaga">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="#ffffff"
        android:text="@string/nomeVaga"
        app:layout_constraintBottom_toTopOf="@+id/edtNomeVaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <EditText
        android:id="@+id/edtNomeVaga"
        android:layout_width="398dp"
        android:layout_height="45dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:hint="@string/digitaVaga"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/numeroSalario"
        app:layout_constraintBottom_toTopOf="@+id/edtValorSalario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeVaga"
        app:layout_constraintVertical_bias="0.923" />

    <EditText
        android:id="@+id/edtValorSalario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:hint="@string/digitaSalario"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarVaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCadastrarVaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:text="@string/botaoVaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>